--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,24 @@
   <title>Open Table</title>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="/lib/react.development.js"></script>
+  <script src="/lib/react-dom.development.js"></script>
+
+
+</head>
+<body>
+  <div id="gallery-container"></div>
+  <div id="menu"></div>
+  <div id="app"></div>
+  <div id="review"></div>
+  <div id="reservation"></div>
+  from body
   <script src="http://localhost:3001/bundle.js"></script>
   <script src="http://localhost:3002/bundle.js"></script>
   <script src="http://localhost:3003/bundle.js"></script>
   <script src="http://localhost:3004/bundle.js"></script>
   <script src="http://localhost:3005/bundle.js"></script>
 
-</head>
-<body>
-  <div id="photo"></div>
-  <div id="overview"></div>
-  <div id="menu"></div>
-  <div id="review"></div>
-  <div id="reservation"></div>
-  from body
   <!-- <script>
     ReactDOM.render(React.createElement(photo), document.getElementById("photo"));
     ReactDOM.render(React.createElement(overview), document.getElementById("overview"));
