--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -25,4 +25,48 @@
   <script src="http://localhost:3005/bundle.js"></script>
 
 </body>
+</html> -->
+
+<!doctype <!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Open Table</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <script src="https://fb.me/react-0.14.3.js"></script>
+    <script src="https://fb.me/react-dom-0.14.3.js"></script>
+</head>
+
+<body>
+    <div class='MotherContainer'>
+
+        <div class='components'>
+            <!-- <div class='component' id="overview"></div> -->
+            <header>
+            </header>
+            <nav></nav>
+            <aside class='sideClass'>
+                <div id="reservation"></div>
+            </aside>
+            <article class='mainarticle'>
+                <section id="overview"></section>
+                <section id="menu"></section>
+                <section id="gallery-container"></section>
+                <section id="reviews"></section>
+            </article>
+            <footer></footer>
+        </div>
+
+    </div>
+    <!--Components-->
+    <script src="http://127.0.0.1:3001/bundle.js"></script>
+    <script src="http://127.0.0.1:3002/bundle.js"></script>
+    <script src="http://127.0.0.1:3003/bundle.js"></script>
+    <script src="http://127.0.0.1:3004/bundle.js"></script>
+    <script src="http://127.0.0.1:3005/bundle.js"></script>
+
+
+</body>
+
 </html>
