added bundle to server

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <!--Components-->
     <script src="http://127.0.0.1:3001/bundle.js"></script>
     <script src="http://127.0.0.1:3002/bundle.js"></script>
-    <script src="http://127.0.0.1:3003/bundle.js"></script>
+    <script src="https://s3.us-east-2.amazonaws.com/reservation-component/bundle.js"></script>
     <script src="http://127.0.0.1:3004/bundle.js"></script>
     <script src="http://127.0.0.1:3005/bundle.js"></script>
 
